--- a/radio-operator-toolbox-angular/src/app/components/menu-tile/menu-tile.component.scss
+++ b/radio-operator-toolbox-angular/src/app/components/menu-tile/menu-tile.component.scss
@@ -1,18 +1,24 @@
 @import './../../../styles';
 
 button {
-    width: 10rem;
-    height: 10rem;
+    width: 5em;
+    height: 5em;
     background-color: #234e3a;
     // background-image: url("assets/imgs/sarneg-image.png");
-
+    
     img {
-        height: 100%;
-        width: 100%;
+        width: 5em;
+        height: 5em;
+        max-height: 100%;
+        max-width: 100%;
     }
 
-    .tile-name{
-        font-size: 2em;
+    .tile-name {
+        font-size: 1em;
         word-wrap: break-word;
+
+        span{
+            overflow-wrap: anywhere;
+        }
     }
 }
