--- a/radio-operator-toolbox-angular/src/app/pages/home-page/home-page.component.html
+++ b/radio-operator-toolbox-angular/src/app/pages/home-page/home-page.component.html
@@ -1,30 +1,32 @@
 <div class="d-flex">
-    <div class="col-6 ">
+    <div class="tile">
         <app-menu-tile [name]="'sarneg'" [routerLink]="[ '/sarneg-tab']"></app-menu-tile>
     </div>
-    <div class="col-6 ">
+    <div class="tile">
         <app-menu-tile [name]="'vigenere'" [routerLink]="[ '/vigenere-tab']"></app-menu-tile>
     </div>
-</div>
-
-
-<div class="row">
-    <div class="col-6 ">
+    <div class="tile">
         <app-menu-tile [name]="'reports'" [routerLink]="[ '/reports-page']"></app-menu-tile>
     </div>
-    <div class="col-6 ">
-        <app-menu-tile [name]="'ksiazka korespondencji'" [routerLink]="[ '/correspondence-book-page']" [isLabelShowed]="true"></app-menu-tile>
+</div>
+
+
+<div class="d-flex">
+    <div class="tile">
+        <app-menu-tile [name]="'ksiazka korespondencji'" [routerLink]="[ '/correspondence-book-page']"
+            [isLabelShowed]="true"></app-menu-tile>
+    </div>
+    <div class="tile">
+        <app-menu-tile [name]="'dane z TDR'" [routerLink]="[ '/tdr-data-page']" [isLabelShowed]="true"></app-menu-tile>
+    </div>
+    <div class="tile">
+        <app-menu-tile [name]="'Ustawienia wszelakie'" [routerLink]="[ '/settings-page']"
+            [isLabelShowed]="true"></app-menu-tile>
     </div>
 </div>
 
 
 <div class="row">
-    <div class="col-6 ">
-        <app-menu-tile [name]="'dane z TDR'" [routerLink]="[ '/tdr-data-page']" [isLabelShowed]="true"></app-menu-tile>
-    </div>
-    <div class="col-6 ">
-        <app-menu-tile [name]="'Ustawienia wszelakie'" [routerLink]="[ '/settings-page']" [isLabelShowed]="true"></app-menu-tile>
-    </div>
 </div>
 
 
@@ -44,7 +46,3 @@
 </button>
 
 <p>{{myvar}}</p>
-
-
-
-
