--- a/radio-operator-toolbox-angular/src/app/pages/home-page/home-page.component.html
+++ b/radio-operator-toolbox-angular/src/app/pages/home-page/home-page.component.html
@@ -19,6 +19,14 @@
     <div class="tile">
         <app-menu-tile [name]="'dane z TDR'" [routerLink]="[ '/tdr-data-page']" [isLabelShowed]="true"></app-menu-tile>
     </div>
+</div>
+
+
+
+<div class="d-flex">
+    <div class="tile">
+        <app-menu-tile [name]="'Notepad'" [routerLink]="[ '/notepad-page']" [isLabelShowed]="true"></app-menu-tile>
+    </div>
     <div class="tile">
         <app-menu-tile [name]="'Ustawienia wszelakie'" [routerLink]="[ '/settings-page']"
             [isLabelShowed]="true"></app-menu-tile>
