clear dtaa works and notepad works

--- a/radio-operator-toolbox-angular/src/app/core-components/nav-bar/nav-bar.component.html
+++ b/radio-operator-toolbox-angular/src/app/core-components/nav-bar/nav-bar.component.html
@@ -6,7 +6,7 @@
                 <img src="assets/imgs/app-icon.png" height="30" alt="">
             </div>
             <div class="me-1" [routerLink]="'home-tab'">
-                <button type="button" name="" id="" class="btn btn-danger" (click)="ClearAllData()" data-bs-toggle="modal" data-bs-target="#mymodal">
+                <button type="button" name="" id="" class="btn btn-danger" (click)="clearAllData()" data-bs-toggle="modal" data-bs-target="#mymodal">
                     CLEAR ALL
                 </button>        
             </div>
