--- a/radio-operator-toolbox-angular/src/app/core-components/nav-bar/nav-bar.component.html
+++ b/radio-operator-toolbox-angular/src/app/core-components/nav-bar/nav-bar.component.html
@@ -14,6 +14,9 @@
 
         <div class="d-flex align-items-center">
             <div class="ms-1" [routerLink]="'sarneg-tab'">
+                <img src="https://cdn.vectorstock.com/i/1000x1000/60/58/lamp-light-bulb-idea-icon-vector-20716058.webp" height="30" alt="">
+            </div>
+            <div class="ms-1" [routerLink]="'sarneg-tab'">
                 <img src="assets/imgs/sarneg-image.png" height="30" alt="">
             </div>
             <div class="ms-1" [routerLink]="'vigenere-tab'">
