--- a/radio-operator-toolbox-angular/src/app/pages/notepad-page/notepad-navbar/notepad-navbar.component.html
+++ b/radio-operator-toolbox-angular/src/app/pages/notepad-page/notepad-navbar/notepad-navbar.component.html
@@ -1,14 +1,18 @@
-<div>
+<div class="d-flex justify-content-between my-1">
     <button type="button" class="btn btn-primary" (click)="prevPage.emit()">
         <i class="fas fa-chevron-left    "></i>
-        Prev Page</button>
-    <button type="button" class="btn btn-primary" (click)="addPage.emit()">Add Page
+        <i class="fas fa-chevron-left    "></i>
+        <i class="fas fa-chevron-left    "></i>
+    </button>
+    <button type="button" class="btn btn-primary" (click)="addPage.emit()">
         <i class="fas fa-file    "></i>
     </button>
-    <button type="button" class="btn btn-danger" (click)="removePage.emit()">Remove Page
+    <button type="button" class="btn btn-danger" (click)="removePage.emit()">
         <i class="fas fa-trash    "></i>
     </button>
-    <button type="button" class="btn btn-primary" (click)="nextPage.emit()">Next Page
+    <button type="button" class="btn btn-primary" (click)="nextPage.emit()">
+        <i class="fas fa-chevron-right    "></i>
+        <i class="fas fa-chevron-right    "></i>
         <i class="fas fa-chevron-right    "></i>
     </button>
 </div>
