--- a/radio-operator-toolbox-angular/src/app/core-components/nav-bar/nav-bar.component.html
+++ b/radio-operator-toolbox-angular/src/app/core-components/nav-bar/nav-bar.component.html
@@ -6,15 +6,17 @@
                 <img src="assets/imgs/app-icon.png" height="30" alt="">
             </div>
             <div class="me-1" [routerLink]="'home-tab'">
-                <button type="button" name="" id="" class="btn btn-danger" (click)="clearAllData()" data-bs-toggle="modal" data-bs-target="#mymodal">
+                <button type="button" name="" id="" class="btn btn-danger" (click)="clearAllData()"
+                    data-bs-toggle="modal" data-bs-target="#mymodal">
                     CLEAR ALL
-                </button>        
+                </button>
             </div>
         </div>
 
         <div class="d-flex align-items-center">
-            <div class="ms-1" [routerLink]="'sarneg-tab'">
-                <img src="https://cdn.vectorstock.com/i/1000x1000/60/58/lamp-light-bulb-idea-icon-vector-20716058.webp" height="30" alt="">
+            <div class="ms-1" (click)="showQuickSheet()">
+                <img src="https://cdn.vectorstock.com/i/1000x1000/60/58/lamp-light-bulb-idea-icon-vector-20716058.webp"
+                    height="30" alt="">
             </div>
             <div class="ms-1" [routerLink]="'sarneg-tab'">
                 <img src="assets/imgs/sarneg-image.png" height="30" alt="">
@@ -94,4 +96,27 @@
         </div>
     </div>
 </div>
- 
+
+
+
+
+
+
+
+
+
+
+
+
+<ng-template #infoModal let-modal>
+	<div class="modal-header">
+		<h4 class="modal-title">Quick Data: title</h4>
+		<button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
+	</div>
+	<div class="modal-body">
+        <app-quick-data></app-quick-data>
+	</div>
+	<div class="modal-footer">
+		<button type="button" class="btn btn-secondary" (click)="modal.close('Close click')">Close</button>
+	</div>
+</ng-template>
