--- a/radio-operator-toolbox-angular/src/app/pages/correspondence-book-page/correspondence-book-page.component.html
+++ b/radio-operator-toolbox-angular/src/app/pages/correspondence-book-page/correspondence-book-page.component.html
@@ -1,3 +1,6 @@
+
+<div ><b>IN PROGRESS</b></div>
+
 <div>
     <div *ngFor="let line of correspondenceBook" class="input-group input-group-sm mb-3">
 
