--- a/radio-operator-toolbox-angular/src/app/pages/reports-page/reports-page.component.html
+++ b/radio-operator-toolbox-angular/src/app/pages/reports-page/reports-page.component.html
@@ -110,6 +110,11 @@
 
 <!-- todo saved reports -->
 
+<div class="my-4">
+    <br>
+    <!-- <button type="button" name="" id="" class="btn btn-primary btn-lg btn-block my-4 d-flex" >Save report</button> -->
+</div>
+
 
 
 <div class="card m-2">
