--- a/radio-operator-toolbox-angular/src/app/components/menu-tile/menu-tile.component.scss
+++ b/radio-operator-toolbox-angular/src/app/components/menu-tile/menu-tile.component.scss
@@ -4,6 +4,7 @@ button {
     width: 5em;
     height: 5em;
     background-color: #234e3a;
+    color: #00ff4b;
     // background-image: url("assets/imgs/sarneg-image.png");
     
     img {
