--- a/radio-operator-toolbox-angular/src/app/core-components/nav-bar/nav-bar.component.html
+++ b/radio-operator-toolbox-angular/src/app/core-components/nav-bar/nav-bar.component.html
@@ -13,8 +13,17 @@
             </div>
         </div>
 
+
+
+
+
+
+
+
+
+
         <div class="d-flex align-items-center">
-            <div class="ms-1" (click)="showQuickSheet()">
+            <div class="ms-1" (click)="showQuickSheetModal()">
                 <img src="https://cdn.vectorstock.com/i/1000x1000/60/58/lamp-light-bulb-idea-icon-vector-20716058.webp"
                     height="30" alt="">
             </div>
@@ -28,8 +37,8 @@
                 <img src="assets/imgs/reports-image.png" height="30" alt="">
             </div>
 
-            <!--  -->
-
+            
+            <!-- HAMBURGER MENU ICON -->
             <button class="ms-2 navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -37,6 +46,14 @@
         </div>
 
 
+
+
+
+
+
+
+
+        <!-- HAMBURGER MENU -->
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
@@ -46,7 +63,9 @@
                     <a class="nav-link" [routerLink]="'vigenere-tab'">kodowanie Vigenere</a>
                 </li>
                 <li *ngFor="let item of getFavouriteReports()" class="nav-item" (click)="setCurrentReport(item)">
-                    <a class="nav-link" [routerLink]="'reports-page'">{{item.name}}</a>
+                    <a class="nav-link" [routerLink]="'reports-page'">{{item.name}}
+                        <i class="fas fa-thumbtack"></i>
+                    </a>
                 </li>
 
 
@@ -62,7 +81,7 @@
                         </button>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                             <a *ngFor="let item of reports" class="dropdown-item d-flex justify-content-end"
-                                [routerLink]="'reports-page'">{{item.name}}</a>
+                                [routerLink]="'reports-page'" (click)="setCurrentReport(item)">{{item.name}}</a>
                         </div>
                     </div>
                 </li>
@@ -110,7 +129,7 @@
 
 <ng-template #infoModal let-modal>
 	<div class="modal-header">
-		<h4 class="modal-title">Quick Data: title</h4>
+		<h4 class="modal-title">Quick Data:</h4>
 		<button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
 	</div>
 	<div class="modal-body">
