--- a/radio-operator-toolbox-angular/src/app/core-components/nav-bar/nav-bar.component.html
+++ b/radio-operator-toolbox-angular/src/app/core-components/nav-bar/nav-bar.component.html
@@ -39,8 +39,8 @@
 
             
             <!-- HAMBURGER MENU ICON -->
-            <button class="ms-2 navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="ms-2 navbar-toggler" type="button" data-bs-toggle="collsapse" data-bs-target="#navbasrNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" (click)="isMenuHidden=!isMenuHidden">
                 <span class="navbar-toggler-icon"></span>
             </button>
         </div>
@@ -54,15 +54,15 @@
 
 
         <!-- HAMBURGER MENU -->
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="collsspse navbar-collapse" [ngClass]="{'hidden':isMenuHidden}" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" [routerLink]="'sarneg-tab'">kodowanie SARNEG </a>
+                    <a class="nav-link" [routerLink]="'sarneg-tab'" (click)="isMenuHidden=!isMenuHidden">kodowanie SARNEG </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" [routerLink]="'vigenere-tab'">kodowanie Vigenere</a>
+                    <a class="nav-link" [routerLink]="'vigenere-tab'" (click)="isMenuHidden=!isMenuHidden">kodowanie Vigenere</a>
                 </li>
-                <li *ngFor="let item of getFavouriteReports()" class="nav-item" (click)="setCurrentReport(item)">
+                <li *ngFor="let item of getFavouriteReports()" class="nav-item" (click)="setCurrentReport(item)" (click)="isMenuHidden=!isMenuHidden">
                     <a class="nav-link" [routerLink]="'reports-page'">{{item.name}}
                         <i class="fas fa-thumbtack"></i>
                     </a>
@@ -81,7 +81,7 @@
                         </button>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                             <a *ngFor="let item of reports" class="dropdown-item d-flex justify-content-end"
-                                [routerLink]="'reports-page'" (click)="setCurrentReport(item)">{{item.name}}</a>
+                                [routerLink]="'reports-page'" (click)="setCurrentReport(item)" (click)="isMenuHidden=!isMenuHidden">{{item.name}}</a>
                         </div>
                     </div>
                 </li>
