--- a/radio-operator-toolbox-angular/src/app/pages/tdr-data-page/tdr-data-page.component.html
+++ b/radio-operator-toolbox-angular/src/app/pages/tdr-data-page/tdr-data-page.component.html
@@ -1,1 +1,26 @@
 <p>tdrsettings-page works!</p>
+<p>my name/nickname</p>
+<p>312klp/DUSIGROSZ-02</p>
+
+
+
+<p>my leader name/nickname</p>
+<p>3121plp/PASIBRZUCH-01</p>
+
+
+<p>other teams names/nicknames</p>
+<p>3121plp/ROZPUSTNIK-03</p>
+<p>3121plp/GWIAZDOREK-04</p>
+<p>3121plp/PODBIERACZ-05</p>
+<p>3121plp/SUPERGLINA-06</p>
+
+
+
+<p>sciezki do opcji w RRC: GPS,KODEK,ALERT,AUTH itp</p>
+
+
+
+
+
+
+
