--- a/radio-operator-toolbox-angular/src/app/pages/reports-page/reports-page.component.html
+++ b/radio-operator-toolbox-angular/src/app/pages/reports-page/reports-page.component.html
@@ -1,3 +1,21 @@
+
+<div class="d-flex">
+    <div class="tile">
+        <app-menu-tile [name]="'MEDEVAC'" [routerLink]="[ '/sarneg-tab']" [isLabelShowed]="true"></app-menu-tile>
+    </div>
+    <div class="tile">
+        <app-menu-tile [name]="'SALUTE'" [routerLink]="[ '/sarneg-tab']" [isLabelShowed]="true"></app-menu-tile>
+    </div>
+</div>
+
+
+
+
+
+
+
+
+
 <div class="input-group mb-1">
 
     <div class="d-flex w-100">
