--- a/radio-operator-toolbox-angular/src/app/pages/reports-page/reports-page.component.scss
+++ b/radio-operator-toolbox-angular/src/app/pages/reports-page/reports-page.component.scss
@@ -1,3 +1,31 @@
+.tile{
+    width: 33%;
+    max-width: 33%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .report-header {
     justify-content: center;
     font-weight: bolder;
