--- a/radio-operator-toolbox-angular/src/app/pages/app-settings-page/app-settings-page.component.html
+++ b/radio-operator-toolbox-angular/src/app/pages/app-settings-page/app-settings-page.component.html
@@ -1,8 +1,6 @@
-<p>app-settings-page works!</p>
-
-<div class="card mb-4">
+<div class="card my-4">
     <div class="card-body">
-        <h5 class="card-title">Application Settings</h5>
+        <h5 class="card-title">Application Settings ({{appSettingsJSON.length}})</h5>
         <textarea [(ngModel)]="appSettingsJSON" class="form-control" rows="5" cols="1000" aria-label="Default"
             aria-describedby="inputGroup-sizing-default"></textarea>
         <div class="d-flex justify-content-between my-2">
@@ -10,25 +8,31 @@
                 [cdkCopyToClipboard]="appSettingsJSON" [cdkCopyToClipboard]="appSettingsJSON"
                 (cdkCopyToClipboardCopied)="alert('Application Settings skopiowane do schowka')">
                 <i class="fa fa-copy" aria-hidden="true"></i></button>
-            <button type="button" name="" id="" class="btn btn-primary btn-lg btn-block" (click)="applySettings()">
+            <button type="button" name="" id="" class="btn btn-primary btn-lg btn-block" (click)="saveAppSettings()">
                 Paste here and Apply
                 <i class="fa fa-paste" aria-hidden="true"></i>
             </button>
         </div>
-    </div> 
-</div>
-
-
-<div class="card">
-    <div class="card-body">
-        <h5 class="card-title">Application Data</h5>
-        <textarea [(ngModel)]="appDataJSON" class="form-control" rows="5" cols="1000" aria-label="Default"
-            aria-describedby="inputGroup-sizing-default"></textarea>
-        <button type="button" name="" id="" class="btn btn-primary btn-lg btn-block">Paste and Apply</button>
     </div>
 </div>
 
 
 
-<div class="d-flex">
+
+<div class="card my-4">
+    <div class="card-body">
+        <h5 class="card-title">Application Data ({{appDataJSON.length}})</h5>
+        <textarea [(ngModel)]="appDataJSON" class="form-control" rows="5" cols="1000" aria-label="Default"
+            aria-describedby="inputGroup-sizing-default"></textarea>
+        <div class="d-flex justify-content-between my-2">
+            <button type="button" name="" id="" class="btn btn-primary btn-lg btn-block col-2 me-2"
+                [cdkCopyToClipboard]="appDataJSON" [cdkCopyToClipboard]="appDataJSON"
+                (cdkCopyToClipboardCopied)="alert('Application Data skopiowane do schowka')">
+                <i class="fa fa-copy" aria-hidden="true"></i></button>
+            <button type="button" name="" id="" class="btn btn-primary btn-lg btn-block" (click)="saveAppData()">
+                Paste here and Apply
+                <i class="fa fa-paste" aria-hidden="true"></i>
+            </button>
+        </div>
+    </div>
 </div>
